# radiko-rs

./: .env.sample  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.ci  LICENSE-APACHE  LICENSE-MIT  README.md  memo.md  todo.md
.gitea/workflows/: scheduled-tests.yml
.github/workflows/: run-cargo-test-publish.yaml
examples/radiko/: JP13.xml  TBS.xml  auth.http  cookie.example  medialist.http  program.http  search.http  search_result.json  station.http  stream.http  weekly_program.http
src/: client.rs  lib.rs  radiko.rs  utils.rs
src/api/: auth.rs  client.rs  endpoint.rs  mod.rs  program.rs  station.rs  stream.rs
src/dto/: mod.rs  program_xml.rs  region_xml.rs  station_xml.rs
src/models/: logo.rs  mod.rs  program.rs  region.rs  search.rs  station.rs  stream.rs
