[package]
name = "radiko-rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "radiko_rs"

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
chrono = "0.4.41"
chrono-tz = "0.10.3"
quick-xml = { version = "0.37.5", features = ["serialize"] }
regex = "1.11.1"
reqwest = "0.12.20"
serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0.219"
serde_json = "1.0.140"
serde_with = "3.13.0"
strum = "0.27.1"
strum_macros = "0.27.1"
tokio = { version = "1.45.1", features = ["full"] }
