[package]
name = "radiko-rs"
version = "0.1.0"
edition = "2024"
authors = ["t9a-dev"]
description = "An unofficial Rust library for accessing Japan's radiko radio streaming service"
documentation = "https://docs.rs/radiko-rs
homepage = "https://github.com/t9a-dev/radiko-rs"
repository = "https://github.com/t9a-dev/radiko-rs"
license = "MIT OR Apache-2.0"
keywords = ["radiko", "radio", "streaming", "japan"]
categories = ["multimedia", "web-programming::http-client"]
readme = "README.md"

[lib]
name = "radiko_rs"

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
chrono = "0.4.41"
chrono-tz = "0.10.3"
quick-xml = { version = "0.38.0", features = ["serialize"] }
regex = "1.11.1"
reqwest = "0.12.20"
serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0.219"
serde_json = "1.0.140"
serde_with = "3.13.0"
strum = "0.27.1"
strum_macros = "0.27.1"
tokio = { version = "1.45.1", features = ["full"] }
